# rehdz-genai-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
src/: config.py
src/agent/: main.py
src/agent/tools/: actual_date.py  themoviedb.py  weatherapi.py
src/bot/: keyboards.py  server.py
src/bot/handlers/: common.py  conversation.py  date_menu.py  help_menu.py  main_menu.py  movies_menu.py  music_menu.py  weather_menu.py
